--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,12 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>3.3.7</version>
+            <version>4.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>3.2.1</version>
+            <version>3.3.1</version>
         </dependency>
         <!-- testing -->
         <dependency>
@@ -80,6 +80,14 @@
     <groupId>javax.mail</groupId>
     <artifactId>mail</artifactId>
     <version>1.4.7</version>
-</dependency>     
+</dependency>
+     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jpamodelgen -->
+     <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-jpamodelgen</artifactId>
+         <version>5.1.0.Final</version>
+         <scope>provided</scope>
+     </dependency>
+
  </dependencies>
 </project>
