--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
       </dependency>
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-aop</artifactId>
+     </dependency>
     <!-- bootstrap and jquery -->
         <dependency>
             <groupId>org.webjars</groupId>
@@ -75,19 +79,11 @@
          <artifactId>hibernate-java8</artifactId>
          <version>5.1.0.Final</version>
      </dependency>
-<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+     <!-- Java Mail -->
 <dependency>
     <groupId>javax.mail</groupId>
     <artifactId>mail</artifactId>
     <version>1.4.7</version>
 </dependency>
-     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jpamodelgen -->
-     <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-jpamodelgen</artifactId>
-         <version>5.1.0.Final</version>
-         <scope>provided</scope>
-     </dependency>
-
  </dependencies>
 </project>
