--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,6 @@ spring:
 logging:
   level:
     root: WARN
-    com.memorynotfound: DEBUG
+    com.startwithjava.simpleblog: DEBUG
     org.springframework.web: INFO
     org.springframework.security: INFO
