--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8080
 
 spring:
+   profiles:default,dev
   thymeleaf:
     cache: false
     check-template: true
@@ -25,7 +26,32 @@ spring:
     username: root
     password:
     driverClassName: com.mysql.jdbc.Driver
-
+---
+spring:
+  profiles:prod
+  thymeleaf:
+    cache: false
+    check-template: true
+    check-template-location: true
+    content-type: text/html
+    enabled: true
+    encoding: UTF-8
+    prefix: classpath:/templates/
+    suffix: .html
+    # excluded-view-names:
+    # template-resolver-order:
+    # view-names:
+  jpa:
+    database: MYSQL
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  datasource:
+    platform: mysql
+    url: jdbc:mysql://localhost:3306/springblog?autoReconnect=true&useSSL=false
+    username: root
+    password:
+    driverClassName: com.mysql.jdbc.Driver
 logging:
   level:
     root: WARN
