--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>jquery</artifactId>
             <version>3.3.1</version>
         </dependency>
+
+     <dependency>
+         <groupId>io.springfox</groupId>
+         <artifactId>springfox-swagger2</artifactId>
+         <version>2.6.1</version>
+         <scope>compile</scope>
+     </dependency>
         <!-- testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
